# acts-core

./: .drone.yml  .travis.yml  AB.ipynb  CMakeLists.txt  CONTRIBUTING.md  README.md  ab.csv  abtest.py  includes.py  pytest.ini  setup.py  test.cpp  todo.md
.github/workflows/: builds.yml
CI/: make_release  perf.py  run_examples.sh  test_coverage
Core/include/Acts/Geometry/: TrackingVolume.hpp
Core/include/Acts/Propagator/: AtlasStepper.hpp  EigenStepper.hpp  EigenStepper.ipp  Navigator.hpp  StraightLineStepper.hpp
Core/include/Acts/Utilities/: FiniteStateMachine.hpp
Core/include/Acts/Vertexing/: HelicalTrackLinearizer.hpp  ImpactPointEstimator.hpp
Core/src/Geometry/: TrackingVolume.cpp
Core/src/Visualization/: GeometryView3D.cpp
Examples/Algorithms/Digitization/include/ActsExamples/Digitization/: DigitizationConfig.hpp  PlanarSteppingAlgorithm.hpp
Examples/Algorithms/Digitization/src/: DigitizationAlgorithm.cpp  DigitizationConfig.cpp
Examples/Algorithms/Fatras/src/: FatrasAlgorithm.cpp
Examples/Algorithms/Geant4/include/ActsExamples/Geant4/: G4DetectorConstructionFactory.hpp  GeantinoRecording.hpp
Examples/Algorithms/Geant4/src/: GeantinoRecording.cpp
Examples/Algorithms/Geant4DD4hep/: CMakeLists.txt
Examples/Algorithms/Geant4DD4hep/include/ActsExamples/Geant4DD4hep/: DD4hepDetectorConstruction.hpp
Examples/Algorithms/Geant4DD4hep/src/: DD4hepDetectorConstruction.cpp
Examples/Algorithms/Geant4HepMC/include/ActsExamples/Geant4HepMC/: EventRecording.hpp
Examples/Algorithms/Geant4HepMC/src/: EventRecording.cpp
Examples/Algorithms/Generators/ActsExamples/Generators/: EventGenerator.cpp  EventGenerator.hpp  MultiplicityGenerators.hpp  ParametricParticleGenerator.cpp  ParametricParticleGenerator.hpp  VertexGenerators.hpp
Examples/Algorithms/GeneratorsPythia8/ActsExamples/Generators/: Pythia8ProcessGenerator.cpp  Pythia8ProcessGenerator.hpp
Examples/Algorithms/Propagation/include/ActsExamples/Propagation/: PropagationAlgorithm.hpp
Examples/Algorithms/Propagation/src/: PropagationAlgorithm.cpp
Examples/Algorithms/TrackFinding/include/ActsExamples/TrackFinding/: TrackFindingAlgorithm.hpp  TrackParamsEstimationAlgorithm.hpp
Examples/Algorithms/TrackFinding/src/: TrackFindingAlgorithmFunction.cpp  TrackParamsEstimationAlgorithm.cpp
Examples/Algorithms/TrackFitting/include/ActsExamples/TrackFitting/: TrackFittingAlgorithm.hpp
Examples/Algorithms/TrackFitting/src/: TrackFittingAlgorithm.cpp  TrackFittingAlgorithmFunction.cpp
Examples/Algorithms/TruthTracking/ActsExamples/TruthTracking/: TruthSeedSelector.hpp
Examples/Algorithms/Vertexing/src/: AdaptiveMultiVertexFinderAlgorithm.cpp  IterativeVertexFinderAlgorithm.cpp  VertexFitterAlgorithm.cpp
Examples/Detectors/DD4hepDetector/include/ActsExamples/DD4hepDetector/: DD4hepDetector.hpp
Examples/Detectors/DD4hepDetector/src/: DD4hepDetector.cpp
Examples/Detectors/MagneticField/src/: BFieldOptions.cpp
Examples/Framework/: CMakeLists.txt
Examples/Framework/include/ActsExamples/Framework/: WhiteBoard.hpp
Examples/Framework/src/Framework/: Sequencer.cpp
Examples/Io/Json/include/ActsExamples/Io/Json/: JsonMaterialWriter.hpp
Examples/Io/Json/src/: JsonMaterialWriter.cpp
Examples/Io/Performance/ActsExamples/Io/Performance/: TrackFinderPerformanceWriter.cpp  TrackFinderPerformanceWriter.hpp
Examples/Io/Root/src/: RootBFieldWriter.cpp  RootMaterialTrackReader.cpp  RootMaterialTrackWriter.cpp  RootMaterialWriter.cpp  RootMeasurementWriter.cpp  RootParticleReader.cpp  RootPlanarClusterWriter.cpp  RootSimHitWriter.cpp  RootTrackParameterWriter.cpp  RootTrajectoryStatesWriter.cpp  RootTrajectorySummaryWriter.cpp  RootVertexPerformanceWriter.cpp
Examples/Run/Common/src/: CommonGeometry.cpp  GeometryExampleBase.cpp  MaterialMappingBase.cpp  MaterialValidationBase.cpp  PropagationExampleBase.cpp
Examples/Run/Fatras/Common/: FatrasSimulation.cpp
Examples/Run/Geant4/DD4hep/: DD4hepGeantinoRecording.cpp
Examples/Run/Geant4/HepMC/: EventRecordingExample.cpp
Examples/Run/MagneticField/: BFieldAccessExample.cpp  BFieldExample.cpp
Examples/Run/Reconstruction/Common/: RecCKFTracks.cpp  RecTruthTracks.cpp  SeedingExample.cpp
Examples/Run/Vertexing/: TrackReaderVertexingPerformanceWriterExample.cpp
Examples/Scripts/Python/: common.py  event_recording.py  fatras.py  geant4dd4hep.py  geantino_recording.py  geometry.py  material_mapping.py  propagation.py  pythia8.py  python_algorithm.py  seeding.py  test.py  truth_tracking.py
Plugins/Json/include/Acts/Plugins/Json/: MaterialMapJsonConverter.hpp
Plugins/Json/src/: MaterialMapJsonConverter.cpp
Plugins/Python/: CMakeLists.txt
Plugins/Python/include/: ActsModule.hpp
Plugins/Python/include/Acts/Plugins/Python/: Utilities.hpp
Plugins/Python/python/: __init__.py  _version.py  examples.py  setup.py
Plugins/Python/python/acts/: __init__.py  _adapter.py  examples.py
Plugins/Python/python/acts/examples/: __init__.py  dd4hep.py
Plugins/Python/src/: ActsModule.cpp  ActsModule.hpp  Base.cpp  DD4hepComponent.cpp  Detector.cpp  Digitization.cpp  DigitizationStub.cpp  ExampleAlgorithms.cpp  ExamplesDetector.cpp  Geant4.cpp  Geant4Component.cpp  Geant4DD4hep.cpp  Geant4DD4hepComponent.cpp  Geant4DD4hepStub.cpp  Geant4HepMC3.cpp  Geant4HepMC3Stub.cpp  Generators.cpp  Geometry.cpp  HepMC3.cpp  HepMC3Stub.cpp  Input.cpp  Json.cpp  JsonStub.cpp  MagneticField.cpp  Material.cpp  ModuleEntry.cpp  Output.cpp  Propagation.cpp  Pythia8.cpp  Pythia8Component.cpp  Pythia8Stub.cpp  TrackFinding.cpp  TrackFitting.cpp  TruthTracking.cpp  Vertexing.cpp
Plugins/Python/tests/: conftest.py  test_algorithms.py  test_base.py  test_detectors.py  test_examples.py  test_magnetic_field.py  test_material.py  test_output.py  test_propagation.py  test_reader.py  test_writer.py
Plugins/Python/tests/helpers/: __init__.py
Tests/IntegrationTests/Fatras/: FatrasSimulationTests.cpp
Tests/UnitTests/Core/Propagator/: AtlasStepperTests.cpp  CMakeLists.txt  NavigatorTests.cpp  StepperTests.cpp
docs/howto/: setup_and_run_vertexing.md
python/acts/: __init__.py
(+8 files in other folders)
